feat: added /books/by-author, added error code for deleting author that has books
(10h12m)
